<resources>
    <string name="app_name">TBC_RoomDB_Assign20</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="age">Age</string>
    <string name="email">Email</string>
    <string name="active_users">Active Users:</string>
    <string name="add_user">Add User</string>
    <string name="remove_user">Remove User</string>
    <string name="update_user">Update User</string>
    <string name="empty_field">Please, fill out all of the fields!</string>
    <string name="empty_email">Please, enter an email address</string>
</resources>