<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.screen.home.HomeFragment">

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etFirstName"
        android:layout_width="160dp"
        android:layout_height="50dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:hint="@string/first_name"
        android:paddingStart="8dp"
        android:paddingEnd="2dp"
        app:layout_constraintEnd_toStartOf="@id/etLastName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etLastName"
        android:layout_width="160dp"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:hint="@string/last_name"
        android:paddingStart="8dp"
        android:paddingEnd="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/etFirstName"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etAge"
        android:layout_width="160dp"
        android:layout_height="50dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="16dp"
        android:hint="@string/age"
        android:inputType="numberDecimal"
        android:paddingStart="8dp"
        android:paddingEnd="2dp"
        app:layout_constraintEnd_toStartOf="@id/etEmail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etFirstName" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etEmail"
        android:layout_width="160dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="30dp"
        android:hint="@string/email"
        android:paddingStart="8dp"
        android:paddingEnd="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/etAge"
        app:layout_constraintTop_toBottomOf="@id/etLastName" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvActiveUsers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/active_users"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@id/etEmail"
        app:layout_constraintStart_toStartOf="@id/etAge"
        app:layout_constraintTop_toBottomOf="@id/etAge" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnAddUser"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:layout_marginTop="80dp"
        android:text="@string/add_user"
        android:textAllCaps="false"
        app:layout_constraintEnd_toStartOf="@id/btnDeleteUser"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvActiveUsers" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnDeleteUser"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:text="@string/remove_user"
        android:textAllCaps="false"
        app:layout_constraintEnd_toStartOf="@id/btnUpdateUser"
        app:layout_constraintStart_toEndOf="@id/btnAddUser"
        app:layout_constraintTop_toTopOf="@id/btnAddUser" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnUpdateUser"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:text="@string/update_user"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btnDeleteUser"
        app:layout_constraintTop_toTopOf="@id/btnAddUser" />


</androidx.constraintlayout.widget.ConstraintLayout>